# deepwash

./: .gitignore  .release-it.json  CITATION.cff  Cargo.toml  DISTRIBUTION.md  LICENSE  README.md  deepwash-archive-keyring.gpg  deepwash-archive-keyring.gpg.PLACEHOLDER
.github/workflows/: build-binaries.yml  crate-registry.yml  publish-apt.yml  release.yml  security.yml  update-brew.yml
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
dists/stable/main/binary-arm64/: Packages
docs/: DISTRIBUTION.md
docs/superpowers/plans/: 2026-07-04-docker-clean-flags.md  2026-07-05-apt-brew-distribution.md
docs/superpowers/specs/: 2026-07-04-docker-clean-flags-design.md  2026-07-05-apt-brew-distribution-design.md
packaging/apt/: verify-install.sh
packaging/brew/: deepwash.rb.tmpl
pool/main/: deepwash_1.2.1-1_amd64.deb  deepwash_1.2.1-1_arm64.deb  deepwash_1.3.0-1_amd64.deb  deepwash_1.3.0-1_arm64.deb  deepwash_1.3.1-1_amd64.deb  deepwash_1.3.1-1_arm64.deb
src/: cli.rs  lib.rs  main.rs  utils.rs
src/tasks/: docker.rs
src/tasks/docker/: containers.rs  full.rs  images.rs  mod.rs  volumes.rs
tests/: cleaner.rs
