[package]
name = "deepwash"
version = "1.2.0"
edition = "2024"
description = """A Command Line Interface to clean your machine (docker...)"""
authors = ["Charles Gauthereau <charles.gauthereau@soluce-technologies.com>"]
license = "MIT"
keywords = ["cleaner", "docker", "linux", "macos"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/Soluce-Technologies/deepwash.git"
homepage = "https://github.com/Soluce-Technologies/deepwash"

[[bin]]
name = "deepwash"
path = "src/main.rs"

[lib]
name = "deepwash"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }

[package.metadata.deb]
maintainer = "Charles Gauthereau <charles.gauthereau@soluce-technologies.com>"
copyright = "2026, Soluce Technologies"
license-file = ["LICENSE", "0"]
section = "utils"
priority = "optional"
extended-description = "A Command Line Interface to clean your machine (docker...)."
