[package]
name = "deepwash"
version = "1.2.0"
edition = "2024"
description = """A Command Line Interface to clean your machine (docker...)"""
authors = ["Charles Gauthereau <charles.gauthereau@soluce-technologies.com>"]
license = "MIT"
keywords = ["cleaner", "docker", "linux", "macos"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/SoluceTechnologies/deepwash.git"
homepage = "https://github.com/SoluceTechnologies/deepwash"

[[bin]]
name = "deepwash"
path = "src/main.rs"

[lib]
name = "deepwash"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }

# Strip debug symbols at build time. Done by rustc (cross-safe) so cargo-deb
# does not invoke host `strip` on a foreign-arch binary (breaks cross arm64).
[profile.release]
strip = true

[package.metadata.deb]
maintainer = "Charles Gauthereau <charles.gauthereau@soluce-technologies.com>"
copyright = "2026, Soluce Technologies"
license-file = ["LICENSE", "0"]
section = "utils"
priority = "optional"
# Cross builds cannot run dpkg-shlibdeps, so pin the glibc dependency explicitly.
depends = "libc6"
extended-description = "A Command Line Interface to clean your machine (docker...)."
